--- a/.htaccess
+++ b/.htaccess
@@ -10,4 +10,4 @@ RedirectMatch 301 (.*)\.md$ http://vianna.de$1.html
 # Redirect /any/dirname or /any/dirname/ to /any/dirname.html
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^(.+[^/])/?$ $1.html [R]
+RewriteRule ^(.+[^/])/?$ http://vianna.de/$1.html [R]
