allow vianna.de/workgroups

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 
 # vianna.de/ags/... and vianna.de/workgroups/... are redirected to
 # the correct vianna.de/01_workgroups/...
-RedirectMatch 301 /workgroups/(.*)$ http://vianna.de/01_workgroups/$1
+RedirectMatch 301 /workgroups(.*)$ http://vianna.de/01_workgroups$1
 RedirectMatch 301 /ags/(.*)$ http://vianna.de/01_workgroups/$1
 
 # requests to .md are transformed to .html
