.htaccess: Re-activate dir rediction...
... so that vianna.de/workgroups/maier does work again.

--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,6 @@ RedirectMatch 301 /ags/(.*)$ http://vianna.de/01_workgroups/$1
 RedirectMatch 301 (.*)\.md$ http://vianna.de$1.html
 
 # Redirect /any/dirname or /any/dirname/ to /any/dirname.html
-#RewriteEngine On
-#RewriteCond %{REQUEST_FILENAME} -d
-#RewriteRule ^(.+[^/])/?$ http://vianna.de/$1.html [R]
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^(.+[^/])/?$ http://vianna.de/$1.html [R]
